--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  cached_network_image: ^3.1.0
+  cloud_firestore: ^2.5.0
+  provider: ^5.0.0
+  google_sign_in: ^5.0.7
+  shared_preferences: ^2.0.6
+  random_string: ^2.3.1
 
 dev_dependencies:
   flutter_test:
