--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   google_sign_in: ^5.0.7
   shared_preferences: ^2.0.6
   random_string: ^2.3.1
+  firebase_core: ^1.5.0
+  firebase_auth: ^3.0.2
 
 dev_dependencies:
   flutter_test:
